Updated to java 17